projet_gl/src/test/deca/codegen/valid/ERROR/io.deca
// Description:
//    Input/Output error
//
// Resultats:
//    Error : Input/Output error
// 
// Historique:
//    cree le 09/01/2024

{
    readInt();
}

